STCOM-461: Fixing app dropdown "jitter" (#635)
* Replaced class of focus trap with the global 'sr-only' class name which fixes the issue where scrollbars would appear when opening the app list dropdown in browsers on Windows.

* Update changelog

--- a/src/components/MainNav/AppList/AppList.css
+++ b/src/components/MainNav/AppList/AppList.css
@@ -90,14 +90,6 @@
 }
 
 /**
- * Focus trap
- */
-.focusTrap {
-  position: absolute;
-  clip: rect(1px, 1px, 1px, 1px);
-}
-
-/**
  * Responsive
  */
 
